corrected layout issues with cards

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,16 +1,3 @@
-.window {
-    background-color:aqua;
-    padding:2rem;
-    margin:2rem;
-    border-radius:25px;
-    border:1px solid darkcyan;
-}
-
-.col {
-    align-content:center;
-    text-align:center;
-    margin-bottom:2rem;
-}
 
 h1 {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -24,10 +11,4 @@ h1 {
     width:250px;
     align-self: center;
     border-radius:30px;
-}
-
-p {
-    text-align:center;
-    margin:2rm;
-    padding:2rm;
 }
